--- a/Modulo2/Desafios/d010 - android/style.css
+++ b/Modulo2/Desafios/d010 - android/style.css
@@ -6,6 +6,43 @@
 }
 
 header {
-    background-image: linear-gradient(135deg, #eaf8bf, #006992,  #001d4a);
+    background-image: linear-gradient(0deg, #1A5C38, #3BD580);
     
+}
+body {
+    background-color: #84E1AD;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+main {
+    background-color: white;
+    width: 1000px;
+    margin: auto;
+    text-align: justify;
+    padding: 20px;
+
+}
+#h1_principal {
+    font-family: 'idroid';
+    color: #125732;
+    
+}
+h2 {
+    font-family: 'idroid';
+    color: #125732;
+    font-size: 1.2em;
+}
+p {
+    text-indent: 25px;
+}
+.change_green {
+    color: #125732;
+    font-weight: bolder;
+}
+#video {
+    background-color: #1A5C38;
+    padding: 10px;
+}
+footer {
+    background-color: #1A5C38;
 }
