--- a/Modulo2/Desafios/d010 - android/style.css
+++ b/Modulo2/Desafios/d010 - android/style.css
@@ -7,12 +7,15 @@
 
 header {
     background-image: linear-gradient(0deg, #1A5C38, #3BD580);
+    margin-top: 0px;
+    padding-top: 0px;
     
 }
 body {
     background-color: #84E1AD;
     font-family: Arial, Helvetica, sans-serif;
-
+    margin: 0px 0px 0px 0px;
+    padding: 0px;
 }
 main {
     background-color: white;
@@ -20,7 +23,14 @@ main {
     margin: auto;
     text-align: justify;
     padding: 20px;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
 
+}
+footer {
+    background-color: #1A5C38;
+    margin:0px 0px 0px 0px;
+    padding: 2px;
 }
 #h1_principal {
     font-family: 'idroid';
@@ -43,6 +53,21 @@ p {
     background-color: #1A5C38;
     padding: 10px;
 }
-footer {
-    background-color: #1A5C38;
+div {
+    display: inline-block;
+}
+li {
+    padding-right: 300px;
+}
+#extra {
+    background-color: #C5EBD6;
+    margin-top: 0px;
+    padding: 15px;
+    border-radius: 0px 0px 15px 15px;
+}
+#cab_extra {
+    background-color:#2FA866;
+    margin-bottom: 0px;
+    padding: 15px;
+    border-radius: 15px 15px 0px 0px;
 }
