--- a/Modulo2/Desafios/d010 - android/style.css
+++ b/Modulo2/Desafios/d010 - android/style.css
@@ -9,7 +9,20 @@ header {
     background-image: linear-gradient(0deg, #1A5C38, #3BD580);
     margin-top: 0px;
     padding-top: 0px;
-    
+}
+header > h1{
+    margin-top: 0px;
+}
+header > p {
+    text-indent: 0px;
+}
+nav > a{
+    text-decoration: none;
+    color: #125732;
+    padding-right: 20px;
+}
+nav > a:hover{
+    background-color: #3BD580;
 }
 body {
     background-color: #84E1AD;
@@ -19,13 +32,14 @@ body {
 }
 main {
     background-color: white;
-    width: 1000px;
+    min-width: 320px;
+    max-width: 1000px;
     margin: auto;
     text-align: justify;
     padding: 20px;
     margin-bottom: 0px;
-    padding-bottom: 0px;
-
+    padding-bottom: 10px;
+    box-shadow: 1px 5px 6px;
 }
 footer {
     background-color: #1A5C38;
@@ -41,6 +55,7 @@ h2 {
     font-family: 'idroid';
     color: #125732;
     font-size: 1.2em;
+    background-image: linear-gradient(90deg, #C4EAD5, white);
 }
 p {
     text-indent: 25px;
@@ -48,10 +63,24 @@ p {
 .change_green {
     color: #125732;
     font-weight: bolder;
+    text-decoration: none;
+}
+p>a:hover {
+    text-decoration: underline;
+}
+img {
+    width: 100%;
 }
 #video {
     background-color: #1A5C38;
     padding: 10px;
+    margin: auto;
+    width: 100%;
+    min-width: 320px;
+    max-width: 860px;
+}
+iframe {
+    width: 100%;
 }
 div {
     display: inline-block;
@@ -70,4 +99,8 @@ li {
     margin-bottom: 0px;
     padding: 15px;
     border-radius: 15px 15px 0px 0px;
+    color: white;
+}
+.dotted {
+    text-decoration: underline dotted;
 }
